--- a/src/app/avis/avis.component.html
+++ b/src/app/avis/avis.component.html
@@ -1,4 +1,2 @@
-<h4>AvisComponent</h4>
-
-<button mat-flat-button (click)="quandOnAime()">J'aime</button>
-<button mat-flat-button (click)="quandOnDeteste()">Je déteste</button>
+<button type="button" class="btn btn-success" (click)="quandOnAime()">J'aime</button>
+<button type="button" class="btn btn-dark" (click)="quandOnDeteste()">Je déteste</button>
