--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="container" style="margin-bottom: 20px">
+<div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col-12">
             <app-demo></app-demo>
         </div>
     </div>
