--- a/src/app/liste-collegues/liste-collegues.component.html
+++ b/src/app/liste-collegues/liste-collegues.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <section class="col-4" *ngFor="let col of colleguesTab">
+    <section class="col-4" *ngFor="let col of collegues">
       <div class="mt-4">
         <app-collegue [collegue]="col"></app-collegue>
       </div>
