--- a/src/app/collegue/collegue.component.html
+++ b/src/app/collegue/collegue.component.html
@@ -1,5 +1,5 @@
 <div class="card border-dark text-center">
-    <img class="card-img-top" src="https://blogdev01.files.wordpress.com/2014/01/facebookprofilepic.jpg" alt="Card image cap">
+    <img class="card-img-top" src="{{collegue.img}}" alt="Card image cap">
     <div class="card-body">
         <a class="item">{{collegue.pseudo}}</a>
         <p class="card-text">
