--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,1 @@
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <div class="row" style="margin-bottom: 20px">
-                <div class="col">
-                    <app-bandeau></app-bandeau>
-                </div>
-            </div>
-            <button type="button" class="btn btn-info">Rafraichir la liste</button>
-            <div class="card-deck">
-                <app-liste-collegues></app-liste-collegues>
-            </div>
-            <app-historique-votes></app-historique-votes>
-        </div>
-    </div>
-</div>
+<app-accueil></app-accueil>
