--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,8 @@
-<p>
-  menu works!
-</p>
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/accueil" routerLinkActive="active-link">Accueil</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/demo" routerLinkActive="active-link">Demo</a>
+  </li>
+</ul>
