Correction fin de tp4

--- a/src/app/collegue/collegue.component.html
+++ b/src/app/collegue/collegue.component.html
@@ -1,7 +1,7 @@
 <div class="card border-dark text-center">
     <img class="card-img-top" src="{{collegue.img}}" alt="Card image cap">
     <div class="card-body">
-        <a class="item">{{collegue.pseudo}}</a>
+        <a class="item" routerLink="/collegues/{{collegue.pseudo}}">{{collegue.pseudo}}</a>
         <p class="card-text">
             <a class="item">{{collegue.score}}</a>
         </p>
