--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,15 +1,13 @@
 <app-menu></app-menu>
-<div class="row">
+<div class="row text-center">
     <div class="col-12">
         <div class="row" style="margin-bottom: 20px">
             <div class="col">
                 <app-bandeau></app-bandeau>
             </div>
         </div>
-        <button type="button" class="btn btn-info">Rafraichir la liste</button>
-        <div class="card-deck">
+        
             <app-liste-collegues></app-liste-collegues>
-        </div>
-        <app-historique-votes></app-historique-votes>
+        
     </div>
 </div>
