--- a/src/app/liste-collegues/liste-collegues.component.html
+++ b/src/app/liste-collegues/liste-collegues.component.html
@@ -1,3 +1,6 @@
+<button type="button" class="btn btn-info fa fa-refresh" onclick="location.reload()"></button>
+<button type="button" class="btn btn-info" routerLink="/collegues/nouveau">Ajouter un collegue</button>
+
 <div class="row">
     <section class="col-4" *ngFor="let col of collegues">
       <div class="mt-4">
