--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,1 +1,7 @@
 <app-menu></app-menu>
+<input [(ngModel)]="searchText" placeholder="search text goes here">
+<ul>
+    <li *ngFor="let c of characters | filter : searchText">
+      {{c}}
+    </li>
+  </ul>
