--- a/src/app/liste-collegues/liste-collegues.component.html
+++ b/src/app/liste-collegues/liste-collegues.component.html
@@ -1,10 +1,10 @@
 <button type="button" class="btn btn-info fa fa-refresh" onclick="location.reload()"></button>
 <button type="button" class="btn btn-info" routerLink="/collegues/nouveau">Ajouter un collegue</button>
-
+<input [(ngModel)]="searchText" placeholder="Rechercher un pseudo">
 <div class="row">
-    <section class="col-4" *ngFor="let col of collegues">
-      <div class="mt-4">
-        <app-collegue [collegue]="col"></app-collegue>
-      </div>
-    </section>
+  <section class="col-4" *ngFor="let col of collegues | filter : searchText">
+    <div class="mt-4">
+      <app-collegue [collegue]="col"></app-collegue>
+    </div>
+  </section>
 </div>
