--- a/src/app/liste-collegues/liste-collegues.component.html
+++ b/src/app/liste-collegues/liste-collegues.component.html
@@ -1,6 +1,11 @@
 <button type="button" class="btn btn-info fa fa-refresh" onclick="location.reload()"></button>
 <button type="button" class="btn btn-info" routerLink="/collegues/nouveau">Ajouter un collegue</button>
-<input [(ngModel)]="searchText" placeholder="Rechercher un pseudo">
+<div class="row">
+  <div class="col">
+    <input [(ngModel)]="searchText" placeholder="Rechercher un pseudo">
+  </div>
+</div>
+
 <div class="row">
   <section class="col-4" *ngFor="let col of collegues | filter : searchText">
     <div class="mt-4">
