--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,10 +1,10 @@
 <app-menu></app-menu>
+<app-votre-dernier-avis></app-votre-dernier-avis>
 <div class="row text-center">
     <div class="col-12">
         <div class="row" style="margin-bottom: 20px">
             <div class="col">
                 <app-bandeau></app-bandeau>
-                <hr/>
             </div>
         </div>
         <app-liste-collegues></app-liste-collegues>
