--- a/src/app/liste-collegues/liste-collegues.component.html
+++ b/src/app/liste-collegues/liste-collegues.component.html
@@ -1,6 +1,6 @@
 <button type="button" class="btn btn-info fa fa-refresh" onclick="location.reload()"></button>
 <button type="button" class="btn btn-info" routerLink="/collegues/nouveau">Ajouter un collegue</button>
-<div class="row">
+<div class="row" style="margin-top: 10px">
   <div class="col">
     <input [(ngModel)]="searchText" placeholder="Rechercher un pseudo">
   </div>
