--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs" style="margin-bottom: 10px">
   <li class="nav-item">
     <a class="nav-link" routerLink="/accueil" routerLinkActive="active-link">Accueil</a>
   </li>
